# libideviceactivation

./: .gitignore  AUTHORS  Activation  Makefile.am  NEWS  README  README.md  configure.ac  libideviceactivation-1.0.pc.in
.github/workflows/: build.yml
include/: Makefile.am  libideviceactivation.h
man/: Makefile.am  ideviceactivation.1
src/: Makefile.am  activation.c  libideviceactivation-1.0.pc.in
tools/: Makefile.am  ideviceactivation.c
